fixing alignment

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Poppins:wght@500&display=swap");
 
 body {
   margin: 0;
@@ -96,18 +97,19 @@ button {
   flex-direction: column;
   min-height: 100%;
   position: relative;
+  gap: 120px;
 }
 .header {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   font-size: 18px;
-  gap: 200px;
+  gap: 120px;
   padding: 16px 32px;
 }
 .hero {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   margin-bottom: 100px;
 }
@@ -115,18 +117,21 @@ button {
   font-size: 1.2rem;
   font-weight: 400;
   color: #000;
-  margin-top: 1rem;
   display: block;
   flex-basis: 500px;
 }
 .hero-cta p {
   margin: 0 auto;
   line-height: 1.7rem;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1rem;
+  
 }
 .hero-cta h1 {
-  font-size: 3rem;
+  font-size: 3.5rem;
   font-weight: 700;
   margin-bottom: 20px;
+  font-family: 'Poppins', sans-serif;
 }
 .hero-image img {
   width: 500px;
@@ -212,10 +217,9 @@ span {
 .about {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  gap: 16px;
+  justify-content: space-evenly;
+  gap: 120px;
   padding: 20px 100px;
-  margin: 0 auto;
 }
 
 .about h1 {
@@ -243,5 +247,6 @@ span {
 .about-image img {
   width: 100%;
   height: 100vh;
+  aspect-ratio: 1;
   object-fit: cover;
 }
